ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-07-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the IndexBuildsCoordinator is enabled for the createIndexes command, the JS test jstests/replsets/replset1.js gets an unexpected result from the getLastError command. The OpTime is for the message epilog entry rather than the createIndexes command. This is likely because the createIndexes command is not updating the LastOp property on the ReplClientInfo after the IndexBuildsCoordinator finishes building the index.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: