SERVER-41847 createIndexes updates last op before returning when using the IndexBuildsCoordinator